testsuite/bsc.interra/messages/ESyntax/ESyntax1.bs.bsc-out.expected
checking package dependencies
Error: "ESyntax1.bs", line 50: (P0005)
  Unexpected "package"; expected ";", "; from layout", or "<EOF>"
